# [PROJECT_DIR]/Cargo.toml
[workspace]
members = ["sorting",
"searching","vectors","fileparsing","threadpool","rustfuture","rusttraits","guessing_game","rust-errors", "linkedlists",
"json-serialize"

]
# resolver = "2"
# [package]
# name = "rust-learning"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
